# ayanamist-bot-rs

./: .gitignore  Cargo.toml  config.toml.example  readme.md
src/: config.rs  greeter.rs  image.rs  interaction.rs  main.rs  pokemon.rs  proxy.rs  verify.rs
src/bot/: command.rs
src/madomagi/: command.rs
src/pokemon/: api.rs  command.rs
src/proxy/: handler.rs
src/verify/: captcha.rs  command.rs  common.rs  handler.rs
