[package]
name = "ayanamist-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dashmap = "5.5"
rand = "0.8"
once_cell = "1.21"
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde_json = "1.0.149"
regex = "1.12.2"
